# amazon_shifts_bot

./: .env  BULLETPROOF_SYSTEM.md  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  README.md  amazon_cookies.json  amazon_page_objects.py  amazon_selectors.py  amazon_session.pkl  booking_state.json  bulletproof_monitor.py  clear_session.py  cli.py  create_session.py  discord.txt  enhanced_integrated_monitor.py  enhanced_job_reporter.py  enhanced_location_filter.py  enhanced_notifier.py  enhanced_seleniumbase_bot.py  filter_config.yaml  instant_booking_config.yaml  job_application.py  job_components.py  job_config.json  job_dashboard_methods.py  job_search_page.py  last_conversation_before_compact.txt  log.txt  log.yml  pyproject.toml  requirements.txt  session_manager.py  start_bulletproof.sh  start_instant_booking.sh  start_monitor.sh  start_simple_bulletproof.sh  test_discord.py
.claude/: settings.local.json
config/: .env  __init__.py  models.py  reader.py  settings.py
latest_logs/test_page_objects.MyTests.test_page_objects/: basic_test_info.txt  page_source.html
page_objects/: __init__.py  filters_panel.py  shift_booking.py  shift_filter.py
page_objects/amazon/: __init__.py  consent.py  login.py
services/: __init__.py  bulletproof_booking.py  bulletproof_session.py  session_service.py  session_service.py.backup
tests/: base_test_case.py  boilerplate_test.py  classic_obj_test.py  page_objects.py  sb_fixture_test.py  test_page_objects.py
utils/: __init__.py  logging_config.py  notifier.py  selenium_helpers.py
